--- a/charts/gitops/kkp-argocd-apps/templates/argocd-apps-logging.yaml
+++ b/charts/gitops/kkp-argocd-apps/templates/argocd-apps-logging.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{ if or .Values.promtail .Values.loki }}
+{{ if or .Values.promtail.enable .Values.loki.enable }}
 ---
 apiVersion: v1
 kind: Namespace
@@ -20,7 +20,7 @@ metadata:
   name: logging
 {{ end }}
 
-{{ if .Values.promtail }}
+{{ if .Values.promtail.enable }}
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -47,9 +47,13 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: logging
+  {{- if .Values.promtail.autoSync }}
+  syncPolicy:
+    automated: {}
+  {{ end }}
 {{ end }}
 
-{{ if .Values.loki }}
+{{ if .Values.loki.enable }}
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -75,4 +79,8 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: logging
+  {{- if .Values.loki.autoSync }}
+  syncPolicy:
+    automated: {}
+  {{ end }}
 {{ end }}
