--- a/.golangci.yml
+++ b/.golangci.yml
@@ -62,6 +62,7 @@ linters:
     - tenv
     - unconvert
     - unused
+    - usestdlibvars
     - wastedassign
     - whitespace
   disable-all: true
