datacenter api: add NetworkPolicyEnabled field
Signed-off-by: Navid <yaa110@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -1027,6 +1027,8 @@ spec:
                                 properties:
                                   name:
                                     type: string
+                                  networkPolicyEnabled:
+                                    type: boolean
                                   vpcs:
                                     items:
                                       description: |-
