--- a/charts/gitops/kkp-argocd-apps/templates/argocd-apps-usermla.yaml
+++ b/charts/gitops/kkp-argocd-apps/templates/argocd-apps-usermla.yaml
@@ -31,13 +31,13 @@ spec:
   destinations:
   - namespace: mla
     server: https://kubernetes.default.svc
+{{ end }}
 ---
+# in case of mla, we define a configmap so - we will need to create NS explicitly.
 apiVersion: v1
 kind: Namespace
 metadata:
   name: mla
-{{ end }}
-
 {{ if and .Values.userMla.enable .Values.userMla.minio.enable }}
 ---
 apiVersion: argoproj.io/v1alpha1
@@ -64,8 +64,10 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: mla
-  {{- if .Values.userMla.minio.autoSync }}
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
+  {{- if .Values.userMla.minio.autoSync }}
     automated: {}
   {{ end }}
 {{ end }}
@@ -98,8 +100,10 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: mla
-  {{- if .Values.userMla.secrets.autoSync }}
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
+  {{- if .Values.userMla.secrets.autoSync }}
     automated: {}
   {{ end }}
 ---
@@ -130,8 +134,10 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: mla
-  {{- if .Values.userMla.minioLifecycleMgr.autoSync }}
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
+  {{- if .Values.userMla.minioLifecycleMgr.autoSync }}
     automated: {}
   {{ end }}
 {{ end }}
@@ -162,8 +168,10 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: mla
-  {{- if .Values.userMla.grafana.autoSync }}
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
+  {{- if .Values.userMla.grafana.autoSync }}
     automated: {}
   {{ end }}
 {{ end }}
@@ -194,8 +202,10 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: mla
-  {{- if .Values.userMla.consul.autoSync }}
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
+  {{- if .Values.userMla.consul.autoSync }}
     automated: {}
   {{ end }}
 {{ end }}
@@ -225,8 +235,10 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: mla
-  {{- if .Values.userMla.alertmanagerProxy.autoSync }}
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
+  {{- if .Values.userMla.alertmanagerProxy.autoSync }}
     automated: {}
   {{ end }}
 {{ end }}
@@ -257,8 +269,10 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: mla
-  {{- if .Values.userMla.cortex.autoSync }}
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
+  {{- if .Values.userMla.cortex.autoSync }}
     automated: {}
   {{ end }}
 
@@ -297,8 +311,10 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: mla
-  {{- if .Values.userMla.lokiDistributed.autoSync }}
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
+  {{- if .Values.userMla.lokiDistributed.autoSync }}
     automated: {}
   {{ end }}
 {{ end }}
@@ -329,8 +345,10 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: mla
-  {{- if .Values.userMla.iapMla.autoSync }}
   syncPolicy:
+    syncOptions:
+      - CreateNamespace=true
+  {{- if .Values.userMla.iapMla.autoSync }}
     automated: {}
   {{ end }}
 {{ end }}
