--- a/addons/csi/kubevirt/csi-driver-operator.yaml
+++ b/addons/csi/kubevirt/csi-driver-operator.yaml
@@ -396,20 +396,30 @@ spec:
   storageClasses:
 {{- range  .Cluster.KubeVirtInfraStorageClasses }}
    - infraStorageClassName: {{ .Name }}
+{{- if .IsDefaultClass }}
      isDefaultClass: {{ .IsDefaultClass }}
+{{- end }}
+{{- if .VolumeBindingMode  }}
      volumeBindingMode: {{ .VolumeBindingMode }}
+{{- end }}
      bus: scsi
+{{- if .Regions }}
      regions:
 {{- range .Regions }}
-      - {{ . }}
+- {{ . }}
 {{- end }}
+{{- end }}
+{{- if .Zones }}
      zones:
 {{- range .Zones }}
-      - {{ . }}
+- {{ . }}
 {{- end }}
+{{- end }}
+{{- if .Labels }}
      labels:
 {{- range $key, $value := .Labels }}
        {{ $key }}: {{ $value }}
+{{- end }}
 {{- end }}
 {{- end }}
 {{end}}
