--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -987,13 +987,35 @@ spec:
                                   If missing or false, annotation will be:
                                   storageclass.kubernetes.io/is-default-class : false
                                 type: boolean
+                              labels:
+                                additionalProperties:
+                                  type: string
+                                description: |-
+                                  Labels is a map of string keys and values that can be used to organize and categorize
+                                  (scope and select) objects. May match selectors of replication controllers
+                                  and services.
+                                type: object
                               name:
                                 type: string
+                              regions:
+                                description: |-
+                                  Regions represents a larger domain, made up of one or more zones. It is uncommon for Kubernetes clusters
+                                  to span multiple regions
+                                items:
+                                  type: string
+                                type: array
                               volumeBindingMode:
                                 description: |-
                                   VolumeBindingMode indicates how PersistentVolumeClaims should be provisioned and bound. When unset,
                                   VolumeBindingImmediate is used.
                                 type: string
+                              zones:
+                                description: |-
+                                  Zones represent a logical failure domain. It is common for Kubernetes clusters to span multiple zones
+                                  for increased availability
+                                items:
+                                  type: string
+                                type: array
                             required:
                               - name
                             type: object
