updating generated docs and prometheus rules
Signed-off-by: julioc-p <14-10820@usb.ve>

--- a/docs/zz_generated.seed.ee.yaml
+++ b/docs/zz_generated.seed.ee.yaml
@@ -495,7 +495,9 @@ spec:
     operatingSystemManager: null
     # Prometheus configures the Prometheus instance deployed into the cluster control plane.
     prometheus:
+      replicas: null
       resources: null
+      tolerations: null
     # Scheduler configures kube-scheduler settings.
     scheduler:
       leaderElection:
