--- a/docs/zz_generated.seed.ee.yaml
+++ b/docs/zz_generated.seed.ee.yaml
@@ -497,7 +497,9 @@ spec:
     operatingSystemManager: null
     # Prometheus configures the Prometheus instance deployed into the cluster control plane.
     prometheus:
+      replicas: null
       resources: null
+      tolerations: null
     # Scheduler configures kube-scheduler settings.
     scheduler:
       leaderElection:
