--- a/pkg/ee/cluster-backup/user-cluster/velero-controller/resources/static/backuprepositories.yaml
+++ b/pkg/ee/cluster-backup/user-cluster/velero-controller/resources/static/backuprepositories.yaml
@@ -1,10 +1,10 @@
-# This file has been generated with Velero v1.12.0. Do not edit.
+# This file has been generated with Velero v1.14.0. Do not edit.
 
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.12.0
+    controller-gen.kubebuilder.io/version: v0.14.0
   labels:
     component: velero
   name: backuprepositories.velero.io
@@ -29,10 +29,19 @@ spec:
         openAPIV3Schema:
           properties:
             apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              description: |-
+                APIVersion defines the versioned schema of this representation of an object.
+                Servers should convert recognized schemas to the latest internal value, and
+                may reject unrecognized values.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
               type: string
             kind:
-              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              description: |-
+                Kind is a string value representing the REST resource this object represents.
+                Servers may infer this from the endpoint the client submits requests to.
+                Cannot be updated.
+                In CamelCase.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
               type: string
             metadata:
               type: object
@@ -40,7 +49,9 @@ spec:
               description: BackupRepositorySpec is the specification for a BackupRepository.
               properties:
                 backupStorageLocation:
-                  description: BackupStorageLocation is the name of the BackupStorageLocation that should contain this repository.
+                  description: |-
+                    BackupStorageLocation is the name of the BackupStorageLocation
+                    that should contain this repository.
                   type: string
                 maintenanceFrequency:
                   description: MaintenanceFrequency is how often maintenance should be run.
@@ -53,10 +64,14 @@ spec:
                     - ""
                   type: string
                 resticIdentifier:
-                  description: ResticIdentifier is the full restic-compatible string for identifying this repository.
+                  description: |-
+                    ResticIdentifier is the full restic-compatible string for identifying
+                    this repository.
                   type: string
                 volumeNamespace:
-                  description: VolumeNamespace is the namespace this backup repository contains pod volume backups for.
+                  description: |-
+                    VolumeNamespace is the namespace this backup repository contains
+                    pod volume backups for.
                   type: string
               required:
                 - backupStorageLocation
