--- a/pkg/ee/cluster-backup/user-cluster/velero-controller/resources/static/downloadrequests.yaml
+++ b/pkg/ee/cluster-backup/user-cluster/velero-controller/resources/static/downloadrequests.yaml
@@ -1,10 +1,10 @@
-# This file has been generated with Velero v1.12.0. Do not edit.
+# This file has been generated with Velero v1.14.0. Do not edit.
 
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.12.0
+    controller-gen.kubebuilder.io/version: v0.14.0
   labels:
     component: velero
   name: downloadrequests.velero.io
@@ -20,13 +20,24 @@ spec:
     - name: v1
       schema:
         openAPIV3Schema:
-          description: DownloadRequest is a request to download an artifact from backup object storage, such as a backup log file.
+          description: |-
+            DownloadRequest is a request to download an artifact from backup object storage, such as a backup
+            log file.
           properties:
             apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              description: |-
+                APIVersion defines the versioned schema of this representation of an object.
+                Servers should convert recognized schemas to the latest internal value, and
+                may reject unrecognized values.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
               type: string
             kind:
-              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              description: |-
+                Kind is a string value representing the REST resource this object represents.
+                Servers may infer this from the endpoint the client submits requests to.
+                Cannot be updated.
+                In CamelCase.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
               type: string
             metadata:
               type: object
@@ -51,6 +62,8 @@ spec:
                         - RestoreItemOperations
                         - CSIBackupVolumeSnapshots
                         - CSIBackupVolumeSnapshotContents
+                        - BackupVolumeInfos
+                        - RestoreVolumeInfo
                       type: string
                     name:
                       description: Name is the name of the Kubernetes resource with which the file is associated.
