--- a/pkg/ee/cluster-backup/user-cluster/velero-controller/resources/static/serverstatusrequests.yaml
+++ b/pkg/ee/cluster-backup/user-cluster/velero-controller/resources/static/serverstatusrequests.yaml
@@ -1,10 +1,10 @@
-# This file has been generated with Velero v1.12.0. Do not edit.
+# This file has been generated with Velero v1.14.0. Do not edit.
 
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.12.0
+    controller-gen.kubebuilder.io/version: v0.14.0
   labels:
     component: velero
   name: serverstatusrequests.velero.io
@@ -22,13 +22,24 @@ spec:
     - name: v1
       schema:
         openAPIV3Schema:
-          description: ServerStatusRequest is a request to access current status information about the Velero server.
+          description: |-
+            ServerStatusRequest is a request to access current status information about
+            the Velero server.
           properties:
             apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              description: |-
+                APIVersion defines the versioned schema of this representation of an object.
+                Servers should convert recognized schemas to the latest internal value, and
+                may reject unrecognized values.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
               type: string
             kind:
-              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              description: |-
+                Kind is a string value representing the REST resource this object represents.
+                Servers may infer this from the endpoint the client submits requests to.
+                Cannot be updated.
+                In CamelCase.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
               type: string
             metadata:
               type: object
@@ -60,7 +71,9 @@ spec:
                   nullable: true
                   type: array
                 processedTimestamp:
-                  description: ProcessedTimestamp is when the ServerStatusRequest was processed by the ServerStatusRequestController.
+                  description: |-
+                    ProcessedTimestamp is when the ServerStatusRequest was processed
+                    by the ServerStatusRequestController.
                   format: date-time
                   nullable: true
                   type: string
