--- a/docs/zz_generated.seed.ee.yaml
+++ b/docs/zz_generated.seed.ee.yaml
@@ -65,6 +65,7 @@ spec:
           # to define the AMIs statically.
           images:
             amzn2: ""
+            centos: ""
             flatcar: ""
             rhel: ""
             rockylinux: ""
@@ -86,6 +87,8 @@ spec:
               http:
                 # OperatingSystems represents list of supported operating-systems with their URLs.
                 operatingSystems:
+                  centos:
+                    vX.Y: http://example.com/images/os.iso
                   flatcar:
                     vX.Y: http://example.com/images/os.iso
                   rhel:
@@ -187,6 +190,8 @@ spec:
             http:
               # OperatingSystems represents list of supported operating-systems with their URLs.
               operatingSystems:
+                centos:
+                  vX.Y: http://example.com/images/os.iso
                 flatcar:
                   vX.Y: http://example.com/images/os.iso
                 rhel:
@@ -245,6 +250,7 @@ spec:
           # Images to use for each supported operating system
           images:
             amzn2: ""
+            centos: ""
             flatcar: ""
             rhel: ""
             rockylinux: ""
@@ -274,6 +280,7 @@ spec:
           # Images to use for each supported operating system.
           images:
             amzn2: ""
+            centos: ""
             flatcar: ""
             rhel: ""
             rockylinux: ""
@@ -309,6 +316,7 @@ spec:
         # Optional: DefaultOperatingSystemProfiles specifies the OperatingSystemProfiles to use for each supported operating system.
         operatingSystemProfiles:
           amzn2: ""
+          centos: ""
           flatcar: ""
           rhel: ""
           rockylinux: ""
@@ -346,6 +354,7 @@ spec:
           # define at least one template.
           templates:
             amzn2: ""
+            centos: ""
             flatcar: ""
             rhel: ""
             rockylinux: ""
@@ -389,6 +398,7 @@ spec:
           # See: https://github.com/kubermatic/machine-controller/blob/master/docs/vsphere.md#template-vms-preparation
           templates:
             amzn2: ""
+            centos: ""
             flatcar: ""
             rhel: ""
             rockylinux: ""
