add default namespace for apps and managed helm releases
* add field to kubermaticconfiguration crd to make default applicationinstallation namespace configurable
* add condition to set the default appinstallation namespace
* add condition to set the default release namespace configured in related appdefinition

Signed-off-by: soer3n <srenhenning@googlemail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticconfigurations.yaml
@@ -2322,6 +2322,12 @@ spec:
                       description: APIServerReplicas configures the replica count for the API-Server deployment inside user clusters.
                       format: int32
                       type: integer
+                    defaultApplications:
+                      description: DefaultApplications contains configuration for default Applications settings.
+                      properties:
+                        namespace:
+                          type: string
+                      type: object
                     disableApiserverEndpointReconciling:
                       description: |-
                         DisableAPIServerEndpointReconciling can be used to toggle the `--endpoint-reconciler-type` flag for
