--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -189,12 +189,18 @@ spec:
                           azure:
                             description: Azure configures an Azure datacenter.
                             properties:
+                              images:
+                                additionalProperties:
+                                  type: string
+                                description: Images to use for each supported operating system
+                                type: object
                               location:
                                 description: |-
                                   Region to use, for example "westeurope". A list of available regions can be
                                   found at https://azure.microsoft.com/en-us/global-infrastructure/locations/
                                 type: string
                             required:
+                              - images
                               - location
                             type: object
                           baremetal:
