--- a/docs/zz_generated.seed.ce.yaml
+++ b/docs/zz_generated.seed.ce.yaml
@@ -74,6 +74,8 @@ spec:
           region: ""
         # Azure configures an Azure datacenter.
         azure:
+          # Images to use for each supported operating system
+          images: null
           # Region to use, for example "westeurope". A list of available regions can be
           # found at https://azure.microsoft.com/en-us/global-infrastructure/locations/
           location: ""
